// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coblocks/gif should render with align attribute 1`] = `
"<!-- wp:coblocks/gif {"align":"left"} -->
<div class="wp-block-coblocks-gif wp-block-image"><figure class="alignleft"><img src="https://wordpress.com/wp-content/uploads/1234/56/image-1.gif" alt=""/></figure></div>
<!-- /wp:coblocks/gif -->"
`;

exports[`coblocks/gif should render with align attribute 2`] = `
"<!-- wp:coblocks/gif {"align":"center"} -->
<div class="wp-block-coblocks-gif wp-block-image"><figure class="aligncenter"><img src="https://wordpress.com/wp-content/uploads/1234/56/image-1.gif" alt=""/></figure></div>
<!-- /wp:coblocks/gif -->"
`;

exports[`coblocks/gif should render with align attribute 3`] = `
"<!-- wp:coblocks/gif {"align":"right"} -->
<div class="wp-block-coblocks-gif wp-block-image"><figure class="alignright"><img src="https://wordpress.com/wp-content/uploads/1234/56/image-1.gif" alt=""/></figure></div>
<!-- /wp:coblocks/gif -->"
`;

exports[`coblocks/gif should render with align attribute 4`] = `
"<!-- wp:coblocks/gif {"align":"full"} -->
<figure class="wp-block-coblocks-gif alignfull"><img src="https://wordpress.com/wp-content/uploads/1234/56/image-1.gif" alt=""/></figure>
<!-- /wp:coblocks/gif -->"
`;

exports[`coblocks/gif should render with align attribute 5`] = `
"<!-- wp:coblocks/gif {"align":"wide"} -->
<figure class="wp-block-coblocks-gif alignwide"><img src="https://wordpress.com/wp-content/uploads/1234/56/image-1.gif" alt=""/></figure>
<!-- /wp:coblocks/gif -->"
`;

exports[`coblocks/gif should render with alt attribute 1`] = `
"<!-- wp:coblocks/gif -->
<figure class="wp-block-coblocks-gif"><img src="https://wordpress.com/wp-content/uploads/1234/56/image-1.gif" alt="alt text"/></figure>
<!-- /wp:coblocks/gif -->"
`;

exports[`coblocks/gif should render with caption 1`] = `
"<!-- wp:coblocks/gif -->
<figure class="wp-block-coblocks-gif"><img alt=""/><figcaption>Some caption</figcaption></figure>
<!-- /wp:coblocks/gif -->"
`;

exports[`coblocks/gif should render with url attribute 1`] = `
"<!-- wp:coblocks/gif -->
<figure class="wp-block-coblocks-gif"><img src="https://wordpress.com/wp-content/uploads/1234/56/image-1.gif" alt=""/></figure>
<!-- /wp:coblocks/gif -->"
`;
